new makefile (data): switch from query api to csv download

--- a/data/makefile
+++ b/data/makefile
@@ -10,9 +10,9 @@ d=`date +%Y-%m-%d`
 get_rki:
 	mkdir -p rki_data
 	# csv seems unreliable use arcgis query api instead
-	#cd rki_data; wget -O RKI_COVID19_$d.csv https://opendata.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0.csv
-	python3 rki_query.py
-	cd rki_data; mv RKI_COVID19.csv RKI_COVID19_$d.csv
+	cd rki_data; wget -O "RKI_COVID19_orig.csv" https://opendata.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0.csv; mv RKI_COVID19_orig.csv RKI_COVID19_$d.csv
+	#python3 rki_query.py
+	#cd rki_data; mv RKI_COVID19.csv RKI_COVID19_$d.csv
 
 clean_data:
 	mkdir -p clean
